--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">APPClassFinalProject</string>
+  <string name="app_name">App Name</string>
+  <string name="setting_excelExport">📊 Excel Export</string>
+  <string name="setting_githubExport">💻 GitHub Export</string>
+  <string name="setting_friend">Friend</string>
+  <string name="setting_addFriend">Add Friend</string>
+  <string name="setting_about">About</string>
+  <string name="setting_changeLanguage">Change Language</string>
+  <string name="setting_deleteAccount">Delete Account</string>
+  <string name="setting_logOut">Log Out</string>
+  <string name="logout_success">Log Out Success!!</string>
+  <string name="changeLanguage_success">語言已切換至中文</string>
+
 </resources>
