add: language change
problem: change language has latency which is not fixed, the code may need some refactor.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,19 +7,57 @@
   <string name="setting_addFriend">新增朋友</string>
   <string name="setting_about">關於我們</string>
   <string name="setting_changeLanguage">切換語言</string>
+  <string name="setting_countporject">已建立%1$s個專案</string>
   <string name="setting_deleteAccount">刪除帳號</string>
   <string name="setting_logOut">登出</string>
   <string name="logout_success">登出成功</string>
   <string name="AddProject_Manager">專案管理者</string>
   <string name="AddProject_btn">新增</string>
+  <string name="AddProject_success">新增成功</string>
+  <string name="AddProject_fail">新增失敗</string>
+  <string name="AddProject_NoAccount">沒有這個帳號</string>
+  <string name="IssueList_Noti">這個專案沒有任何問題</string>
+  <string name="IssueList_Error">加載時發生錯誤: </string>
+  <string name="IssueList_Designe">負責人:</string>
   <string name="item_project_title">專案名稱: %1$s</string>
   <string name="item_project_summary">簡述: %1$s</string>
   <!--這邊要相反-->
-  <string name="changeLanguage_success">Language switched to English</string>
+  <string name="changeLanguage_success">語言已切換至中文</string>
   <string name="AddProject_Title">新增專案</string>
   <string name="AddProject_Name">專案名稱</string>
   <string name="AddProject_Summary">專案簡述</string>
   <string name="menu_home">主頁</string>
   <string name="menu_Add">新增</string>
   <string name="menu_settings">設定</string>
+  <string name="AddIssue_Title">新增議題</string>
+  <string name="AddIssue_Name">主旨</string>
+  <string name="AddIssue_Summary">概述</string>
+  <string name="AddIssue_StartTime">開始時間</string>
+  <string name="AddIssue_EndTime">結束時間</string>
+  <string name="AddIssue_Status">狀態</string>
+  <string name="AddIssue_Designee">被指派者</string>
+  <string name="AddIssue_btn">儲存</string>
+  <string name="EditIssue_Title">編輯議題</string>
+  <string name="EditIssue_Topic">主旨</string>
+  <string name="EditIssue_Summary">概述</string>
+  <string name="EditIssue_StartTime">開始時間</string>
+  <string name="EditIssue_EndTime">結束時間</string>
+  <string name="EditIssue_Status">狀態</string>
+  <string name="EditIssue_Designee">負責人</string>
+  <string name="EditIssue_Save">儲存</string>
+  <string name="EditIssue_Discard">丟棄</string>
+  <string name="Month1">一月</string>
+  <string name="Month2">二月</string>
+  <string name="Month3">三月</string>
+  <string name="Month4">四月</string>
+  <string name="Month5">五月</string>
+  <string name="Month6">六月</string>
+  <string name="Month7">七月</string>
+  <string name="Month8">八月</string>
+  <string name="Month9">九月</string>
+  <string name="Month10">十月</string>
+  <string name="Month11">十一月</string>
+  <string name="Month12">十二月</string>
+  <string name="Gantt_Month">月份</string>
+  <string name="Gantt_Issue">議題</string>
 </resources>
