--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
   <string name="setting_addFriend">Add Friend</string>
   <string name="setting_about">About</string>
   <string name="setting_changeLanguage">Change Language</string>
+  <string name="setting_countporject">There are %1$s projects</string>
   <string name="setting_deleteAccount">Delete Account</string>
   <string name="setting_logOut">Log Out</string>
   <string name="logout_success">Log Out Success!!</string>
@@ -15,10 +16,47 @@
   <string name="AddProject_Summary">Project Summary</string>
   <string name="AddProject_Manager">Project Manager</string>
   <string name="AddProject_btn">ADD</string>
+  <string name="AddProject_success">Succeed</string>
+  <string name="AddProject_fail">Failed</string>
+  <string name="AddProject_NoAccount">The account doesn\'t exist.</string>
+  <string name="IssueList_Noti">There is no any issues in this project.</string>
+  <string name="IssueList_Error">Got an error during the process:</string>
+  <string name="IssueList_Designe">Designee:</string>
   <string name="item_project_title">ProjectName: %1$s</string>
   <string name="item_project_summary">Summary: %1$s</string>
-  <string name="changeLanguage_success">語言已切換至中文</string>
+  <string name="changeLanguage_success">Language switched to English</string>
   <string name="menu_home">Home</string>
   <string name="menu_Add">Add</string>
   <string name="menu_settings">Settings</string>
+  <string name="AddIssue_Title">New Issue</string>
+  <string name="AddIssue_Name">Topic</string>
+  <string name="AddIssue_Summary">Summary</string>
+  <string name="AddIssue_StartTime">Start Time</string>
+  <string name="AddIssue_EndTime">End Time</string>
+  <string name="AddIssue_Status">Status</string>
+  <string name="AddIssue_Designee">Designee</string>
+  <string name="AddIssue_btn">Save</string>
+  <string name="EditIssue_Title">Edit Issue</string>
+  <string name="EditIssue_Topic">Topic</string>
+  <string name="EditIssue_Summary">Summary</string>
+  <string name="EditIssue_StartTime">Start Time</string>
+  <string name="EditIssue_EndTime">End Time</string>
+  <string name="EditIssue_Status">Status</string>
+  <string name="EditIssue_Designee">Designee</string>
+  <string name="EditIssue_Save">Save</string>
+  <string name="EditIssue_Discard">Discard</string>
+  <string name="Month1">Jan</string>
+  <string name="Month2">Feb</string>
+  <string name="Month3">Mar</string>
+  <string name="Month4">Apr</string>
+  <string name="Month5">May</string>
+  <string name="Month6">Jun</string>
+  <string name="Month7">Jul</string>
+  <string name="Month8">Aug</string>
+  <string name="Month9">Sep</string>
+  <string name="Month10">Oct</string>
+  <string name="Month11">Nov</string>
+  <string name="Month12">Dec</string>
+  <string name="Gantt_Month">Month</string>
+  <string name="Gantt_Issue">Issue</string>
 </resources>
