add: Login translate button

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -94,6 +94,12 @@
   <string name="register_weak_password">密碼強度不足</string>
   <string name="register_network_error">網路連接錯誤，請稍後重試</string>
   <string name="register_email_invalid_format">請輸入有效的電子郵件格式</string>
+<!--  登入頁面的-->
+  <string name="please_enter_email_password">請輸入電子郵件和密碼</string>
+  <string name="login_success">登入成功</string>
+  <string name="login_failed">登入失敗</string>
+  <string name="email_not_registered">此電子郵件尚未註冊</string>
+  <string name="email_format_incorrect">電子郵件格式不正確</string>
 <!--  設定頁面的-->
   <string name="github_input_title">輸入 GitHub 帳號</string>
   <string name="github_confirm">確定</string>
@@ -130,4 +136,5 @@
   <string name="Register_Email">電子信箱</string>
   <string name="Register_btn">註冊</string>
   <string name="Register_HaveAccount">已有帳號?</string>
+  <string name="Login_translate">切換語言</string>
 </resources>
