fix: register User password problem
- setting add delete Project button
- reformat code

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,9 +2,9 @@
 <resources>
   <string name="app_name">App Name</string>
   <string name="home_welcome">歡迎回來</string>
-  <string name="setting_title">📊 設定</string>
+  <string name="setting_title">⚙️ 設定</string>
   <string name="setting_excelExport">📊 Excel 匯出</string>
-  <string name="setting_githubExport">💻 GitHub 匯出</string>
+  <string name="setting_githubExport">💻 GitHub 匯入</string>
   <string name="setting_friend">朋友</string>
   <string name="setting_addFriend">新增朋友</string>
   <string name="setting_about">關於我們</string>
@@ -137,4 +137,5 @@
   <string name="Register_btn">註冊</string>
   <string name="Register_HaveAccount">已有帳號?</string>
   <string name="Login_translate">切換語言</string>
+  <string name="setting_deleteProject">刪除專案</string>
 </resources>
