--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,8 +154,10 @@
   <string name="delete_project_success">Project \"%s\" deleted successfully</string>
   <string name="delete_project_failed">Failed to delete project: %s</string>
   <string name="project_id_not_found">Unable to get project information</string>
-
-  <string name="Friend_title">Friends</string>
-  <string name="Friend_add">Add</string>
-  <string name="Friend_del">Delete</string>
+  <string name="friend">Friend</string>
+  <string name="friend_email">Email:</string>
+  <string name="friend_account">Account:</string>
+  <string name="friend_id">ID</string>
+  <string name="friend_add">Add Friend</string>
+  <string name="friend_delete">Delete Friend</string>
 </resources>
